--- a/20181106/Project/Objects/BH-F103.build_log.htm
+++ b/20181106/Project/Objects/BH-F103.build_log.htm
@@ -21,16 +21,12 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.35.1.0
  
 <h2>Project:</h2>
-E:\STM32_wrok\1000A12V2018080201\Project\BH-F103.uvprojx
+E:\SMPS_Project\SMPS_Project\1000A15VECO\1000A12V_V2\STM32Program\20181106\Project\BH-F103.uvprojx
 Project File Date:  07/26/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling control.c...
-linking...
-Program Size: Code=10576 RO-data=948 RW-data=296 ZI-data=2248  
-FromELF: creating hex file...
 ".\Objects\BH-F103.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
