--- a/20181106/Project/Objects/BH-F103.build_log.htm
+++ b/20181106/Project/Objects/BH-F103.build_log.htm
@@ -26,8 +26,66 @@ Project File Date:  07/26/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'Target 1'
-".\Objects\BH-F103.axf" - 0 Error(s), 0 Warning(s).
+Rebuild target 'Target 1'
+assembling startup_stm32f10x_hd.s...
+compiling misc.c...
+compiling stm32f10x_bkp.c...
+compiling stm32f10x_can.c...
+compiling core_cm3.c...
+compiling system_stm32f10x.c...
+compiling stm32f10x_cec.c...
+compiling stm32f10x_crc.c...
+compiling stm32f10x_adc.c...
+compiling stm32f10x_dac.c...
+compiling stm32f10x_exti.c...
+compiling stm32f10x_dbgmcu.c...
+compiling stm32f10x_dma.c...
+compiling stm32f10x_gpio.c...
+compiling stm32f10x_fsmc.c...
+compiling stm32f10x_i2c.c...
+compiling stm32f10x_flash.c...
+compiling stm32f10x_iwdg.c...
+compiling stm32f10x_rtc.c...
+compiling stm32f10x_sdio.c...
+compiling stm32f10x_pwr.c...
+compiling stm32f10x_spi.c...
+compiling stm32f10x_usart.c...
+compiling stm32f10x_rcc.c...
+compiling stm32f10x_tim.c...
+compiling stm32f10x_wwdg.c...
+compiling adc.c...
+compiling led.c...
+compiling stm32f10x_it.c...
+compiling main.c...
+..\User\main.c(65): warning:  #550-D: variable "eStatus"  was set but never used
+    eMBErrorCode eStatus;
+..\User\main.c: 1 warning, 0 errors
+compiling nvic.c...
+compiling dma.c...
+compiling control.c...
+compiling mb.c...
+compiling mbcrc.c...
+compiling mbtcp.c...
+compiling mbfuncdiag.c...
+compiling mbfunccoils.c...
+compiling dac.c...
+compiling mbfuncdisc.c...
+compiling time.c...
+compiling myrtu.c...
+compiling usart.c...
+compiling mbrtu.c...
+compiling mbfuncinput.c...
+compiling mbfuncholding.c...
+compiling mbutils.c...
+compiling mbfuncother.c...
+compiling portevent.c...
+compiling mbascii.c...
+compiling portserial.c...
+compiling porttimer.c...
+linking...
+Program Size: Code=10584 RO-data=948 RW-data=296 ZI-data=2248  
+FromELF: creating hex file...
+".\Objects\BH-F103.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -41,7 +99,7 @@ Package Vendor: Keil
   C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:10
 </pre>
 </body>
 </html>
